zai-clock/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zai-clock
  namespace: zai-clock
  labels:
    app.kubernetes.io/name: zai-clock
    app: zai-clock
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: zai-clock
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zai-clock
        app: zai-clock
    spec:
      containers:
      - name: zai-clock
        image: "nginx:alpine"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: site
      volumes:
      - name: site
        configMap:
          name: zai-clock
