zai-clock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zai-clock
  namespace: zai-clock
  labels:
    app.kubernetes.io/name: zai-clock
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app.kubernetes.io/name: zai-clock
